# K12-Observatory

./: .gitignore  README.md  docker-compose.yml  test.dockerfile
.github/workflows/: test-html-scraper.yml
raw-input-data/: K12SIX-SchoolDistrictswIncidents.csv
scraper/html-scraper/: README.md  pyproject.toml
scraper/html-scraper/scraper/: __init__.py  component.py  crawler.py  crawler_middleware.py  downloader.py  downloader_middleware.py  perf.py  processor.py  scheduler.py  scrape.py  target.py  targets  task.py
scraper/html-scraper/tests/: conftest.py  test_configuration.py  test_crawler_middleware.py  test_downloader_middleware.py  test_scrape.py
scraper/html-scraper/tests/utils/mock/: __init__.py
scraper/html-scraper/tests/utils/mock/opentelemetry/: __init__.py
scraper/html-scraper/tests/utils/mock/opentelemetry/semconv/: trace.py
scraper/html-scraper/tests/utils/mock/website/: __init__.py
scraper/html-scraper/tests/utils/mock/website/template/: index.jinja
scraper/puppeteer-scraper/: K12SIX-SchoolDistrictswIncidents.csv  NCES.xlsx  README.md  scraper.py
