[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    "tldextract",
    "beautifulsoup4",
]
version = "0.1"

[project.optional-dependencies]
dev = [
    "yapf",
    "pylint",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "hypothesis",
    "Jinja2",
]

[project.scripts]
scrape = "scraper.scrape:scrape"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["scraper"]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--show-capture=stdout",
    # "--capture=tee-sys",
    "--import-mode=importlib",
    "--cov=scraper",
    "--durations=0",
    "--durations-min=0.01",
]
pythonpath = [
    "scraper",
    "tests/utils",
]

[tool.coverage.run]
branch = true
concurrency = [
    "thread",
    "multiprocessing",
]
cover_pylib = true
omit = [
    "scraper/perf.py",
]

[tool.coverage.report]
show_missing = true
