[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    "tldextract",
    "beautifulsoup4",

    # Trace
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-jaeger-thrift",
]
version = "0.1"

[project.optional-dependencies]
dev = [
    "yapf",
    "pylint",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "hypothesis",
    "Jinja2",
]

[project.scripts]
scrape = "scraper.scrape:scrape"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["scraper"]

[tool.pytest.ini_options]
pythonpath = [
    "scraper",
    "tests/utils",
]
addopts = [
    # General
    "--capture=tee-sys",
    "--cache-clear",

    # Reporting
    "--durations=0",
    "--durations-min=0.01",
    "--verbose",
    "-r fExX",
    "--show-capture=all",

    # Test collection
    "--import-mode=importlib",

    # Coverage
    "--cov=scraper",
]

[tool.coverage.run]
branch = true
concurrency = [
    "thread",
    "multiprocessing",
]
cover_pylib = true
omit = [
    "scraper/perf.py",
]

[tool.coverage.report]
show_missing = true
