[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
    "tldextract",
    "beautifulsoup4",
]
version = "0.1"

[project.optional-dependencies]
dev = [
    "yapf",
    "pylint",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "hypothesis",
    "Jinja2",
]
trace = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-semantic-conventions",
]

[project.scripts]
scrape = "scraper.scrape:scrape"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["scraper"]

[tool.pytest.ini_options]
pythonpath = [
    "scraper",
    "tests/utils",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "profiling: mark tests for profiling",
]
addopts = [
    # General
    "--capture=tee-sys",
    "--cache-clear",

    # Reporting
    "--durations=0",
    "--durations-min=0.01",
    "--verbose",
    "-r fExX",
    "--show-capture=all",
    "--strict-markers",

    # Test collection
    "--import-mode=importlib",

    # Coverage
    "--cov=scraper",
]

[tool.coverage.run]
branch = true
concurrency = [
    "thread",
    "multiprocessing",
]
cover_pylib = true
omit = [
    "scraper/perf.py",
]

[tool.coverage.report]
show_missing = true
